--- a/genindex.html
+++ b/genindex.html
@@ -60,6 +60,7 @@
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  | <a href="#X"><strong>X</strong></a>
+ | <a href="#Z"><strong>Z</strong></a>
  
 </div>
 <h2 id="A">A</h2>
@@ -484,8 +485,12 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.fetch_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.file">file (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.app_settings.html#copyxnat.xnat.app_settings.TransferMode.file">file (copyxnat.xnat.app_settings.TransferMode attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.file">(copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.file_attributes">file_attributes() (copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
@@ -663,6 +668,8 @@
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">make_project_names_unique() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.message">message() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
+</li>
+      <li><a href="copyxnat.xnat.app_settings.html#copyxnat.xnat.app_settings.TransferMode.meta">meta (copyxnat.xnat.app_settings.TransferMode attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.metadata_missing">metadata_missing() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 
@@ -891,6 +898,8 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.project_server_path">(copyxnat.xnat.xnat_interface.XnatProject method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.ProjectFailure">ProjectFailure</a>
+</li>
       <li><a href="copyxnat.utils.rsync.html#copyxnat.utils.rsync.ProjectRsync">ProjectRsync (class in copyxnat.utils.rsync)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
@@ -1025,6 +1034,8 @@
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
 </li>
+      <li><a href="copyxnat.xnat.app_settings.html#copyxnat.xnat.app_settings.TransferMode.rsync">rsync (copyxnat.xnat.app_settings.TransferMode attribute)</a>
+</li>
       <li><a href="copyxnat.utils.rsync.html#copyxnat.utils.rsync.ProjectRsync.rsync_project_data">rsync_project_data() (copyxnat.utils.rsync.ProjectRsync method)</a>
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run">run() (copyxnat.xnat.commands.Command method)</a>
@@ -1086,6 +1097,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.TAGS_TO_REMAP">TAGS_TO_REMAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
+      <li><a href="copyxnat.xnat.app_settings.html#copyxnat.xnat.app_settings.TransferMode">TransferMode (class in copyxnat.xnat.app_settings)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1237,6 +1250,14 @@
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatSubject">XnatSubject (class in copyxnat.xnat.xnat_interface)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType">XnatType (class in copyxnat.xnat.xml_cleaner)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="Z">Z</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.app_settings.html#copyxnat.xnat.app_settings.TransferMode.zip">zip (copyxnat.xnat.app_settings.TransferMode attribute)</a>
 </li>
   </ul></td>
 </tr></table>
